strongswan-5.3.1
----------------

- Fixed a denial-of-service and potential remote code execution vulnerability
  triggered by IKEv1/IKEv2 messages that contain payloads for the respective
  other IKE version. Such payload are treated specially since 5.2.2 but because
  they were still identified by their original payload type they were used as
  such in some places causing invalid function pointer dereferences.
  The vulnerability has been registered as CVE-2015-3991.

- The new aesni plugin provides CBC, CTR, XCBC, CMAC, CCM and GCM crypto
  primitives for AES-128/192/256. The plugin requires AES-NI and PCLMULQDQ
  instructions and works on both x86 and x64 architectures. It provides
  superior crypto performance in userland without any external libraries.


strongswan-5.3.0
----------------

- Added support for IKEv2 make-before-break reauthentication. By using a global
  CHILD_SA reqid allocation mechanism, charon supports overlapping CHILD_SAs.
  This allows the use of make-before-break instead of the previously supported
  break-before-make reauthentication, avoiding connectivity gaps during that
  procedure. As the new mechanism may fail with peers not supporting it (such
  as any previous strongSwan release) it must be explicitly enabled using
  the charon.make_before_break strongswan.conf option.

- Support for "Signature Authentication in IKEv2" (RFC 7427) has been added.
  This allows the use of stronger hash algorithms for public key authentication.
  By default, signature schemes are chosen based on the strength of the
  signature key, but specific hash algorithms may be configured in leftauth.

- Key types and hash algorithms specified in rightauth are now also checked
  against IKEv2 signature schemes.  If such constraints are used for certificate
  chain validation in existing configurations, in particular with peers that
  don't support RFC 7427, it may be necessary to disable this feature with the