@@ -45,6 +45,8 @@ enum tcg_attr_t {
 	TCG_SWID_TAG_ID_EVENTS =              0x00000013,
 	TCG_SWID_TAG_INVENTORY =              0x00000014,
 	TCG_SWID_TAG_EVENTS =                 0x00000015,
+	TCG_SWID_SUBSCRIPTION_STATUS_REQ =    0x00000016,
+	TCG_SWID_SUBSCRIPTION_STATUS_RESP =   0x00000017,
 
 	/* IF-M Attribute Segmentation */
 	TCG_SEG_MAX_ATTR_SIZE_REQ =           0x00000021,
