@@ -47,6 +47,7 @@ tests_SOURCES = tests.h tests.c \
   suites/test_hasher.c \
   suites/test_crypter.c \
   suites/test_crypto_factory.c \
+  suites/test_iv_gen.c \
   suites/test_pen.c \
   suites/test_asn1.c \
   suites/test_asn1_parser.c \
